End of placement code dump All of the remaining edits made to the parsec service while I've been on placement, some may not be working but I believe that all relevent test currently pass.
Signed-off-by: Sam Davis <Sam.Davis@arm.com>

--- a/e2e_tests/tests/all_providers/config/tomls/root_of_trust_does_not_exist.toml
+++ b/e2e_tests/tests/all_providers/config/tomls/root_of_trust_does_not_exist.toml
@@ -28,3 +28,4 @@ key_info_manager = "on-disk-manager"
 tcti = "mssim:host=127.0.0.1,port=2321"
 owner_hierarchy_auth = ""
 endorsement_hierarchy_auth = ""
+attesting_key = "Rsa"
