--- a/e2e_tests/tests/all_providers/config/tomls/attestation_none.toml
+++ b/e2e_tests/tests/all_providers/config/tomls/attestation_none.toml
@@ -28,3 +28,4 @@ key_info_manager = "on-disk-manager"
 tcti = "mssim:host=127.0.0.1,port=2321"
 owner_hierarchy_auth = ""
 endorsement_hierarchy_auth = ""
+root_of_trust = {pcr_list = [0,1,2] ,pcr_hash_alg = "Sha256"}
